# thunderfpr

./: .gitignore  CHANGELOG.md  COMMANDS.md  Cargo.toml  FINAL_SUMMARY.md  FL_STUDIO_SETUP.md  GITHUB_SETUP.md  HOMEBREW_INSTALL.md  INSTALLATION.md  Info.plist  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STANDALONE_TEST.md  daws.py  fix_dsp_wide.py  fix_hidpi.py  fix_processor_mut.py  fix_processor_types.py  full-plan.md  latency.py  remove_mutex.py  run-standalone.sh  test-all.sh  test-gui.sh  update_cargo.py  update_processor.py  update_processor_iter.py
.qwen/: settings.json
crates/thunderforge-core/: Cargo.toml
crates/thunderforge-core/src/: lib.rs
crates/thunderforge-core/src/dsp/: biquad.rs  cabinet.rs  chorus.rs  compressor.rs  delay.rs  mod.rs  noise_gate.rs  overdrive.rs  reverb.rs  tone_stack.rs  utils.rs  waveshaper.rs
crates/thunderforge-core/src/nam/: mod.rs  model.rs  wavenet.rs  weights.rs
crates/thunderforge-core/src/presets/: factory.rs  mod.rs  preset.rs
crates/thunderforge-plugin/: Cargo.toml
crates/thunderforge-plugin/src/: editor.rs  lib.rs  params.rs  processor.rs
crates/thunderforge-standalone/: Cargo.toml
crates/thunderforge-standalone/src/: main.rs
homebrew-formula/: lh-thunderforge.rb
scripts/: audio_demo.py  build.sh  generate_test_irs.py  install.sh  release.sh  test_plugin.py  update.sh
ui/src/: index.html
ui/src/components/: Knob.js  ModelBrowser.js  Switch.js  Waveform.js
ui/src/engine/: bridge.js
ui/src/styles/: knobs.css  leds.css  main.css  materials.css
