[package]
name = "thunderforge-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rustfft = { workspace = true }
log = { workspace = true }
num-complex = "0.4"
bytemuck = "1.14"

[lib]
name = "thunderforge_core"
