[package]
name = "thunderforge-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thunderforge-core = { path = "../thunderforge-core" }
nih_plug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
atomic_float = { workspace = true }
log = { workspace = true }
